   using the extended escape entities map, only escape a character if the current output charset does not support it.
   This produces smaller, more legible HTML, with greated control over the output (by setting charset and escape mode).

 * If pretty-print is disabled, don't trim outer whitespace in Element.html()
   <https://github.com/jhy/jsoup/issues/368>

 * Fixed an issue where <svg><img/></svg> was parsed as <svg><image/></svg>
   <https://github.com/jhy/jsoup/issues/364>

 * Fixed an issue where a UTF-8 BOM character was not detected if the HTTP response did not specify a charset, and
   the HTML body did, leading to the head contents incorrectly being parsed into the body. Changed the behavior so that
   when the UTF-8 BOM is detected, it will take precedence for determining the charset to decode with.
   <https://github.com/jhy/jsoup/issues/348>

 * Relaxed doctype validation, allowing doctypes to not specify a name.
   <https://github.com/jhy/jsoup/issues/460>

 * Fixed an issue in parsing a base URI when loading a URL containing a http-equiv element.
   <https://github.com/jhy/jsoup/issues/440>

 * Fixed an issue for Java 1.5 / Android 2.2 compatibility
   <https://github.com/jhy/jsoup/issues/375>

*** Release 1.7.3 [2013-Nov-10]
 * Introduced FormElement, providing easy access to form controls and their data, and the ability to submit forms
   with Jsoup.Connect.

 * Reduced GC impact during HTML parsing, with 17% fewer objects created, and 3% faster parses.

 * Reduced CSS selection time by 26% for common queries.

 * Improved HTTP character set detection.
   <https://github.com/jhy/jsoup/pull/325> <https://github.com/jhy/jsoup/issues/321>

 * Added Document.location, to get the URL the document was retrieved from. Helpful if connection was redirected.
   <https://github.com/jhy/jsoup/pull/306>

 * Fixed support for self-closing script tags.
   <https://github.com/jhy/jsoup/issues/305>

 * Fixed a crash when reading an unterminated CDATA section.